--- a/css/estilos.css
+++ b/css/estilos.css
@@ -70,6 +70,33 @@
 }
 
 
+.login{
+    width: 300px;
+    
+} 
+
+.login1{
+    width: 300px;
+    padding: 20px;
+}
+
+
+
+.box-login{
+    width: 100%;
+    display: flex;
+    height: 50%;
+    align-items: center;
+    justify-content: center;
+  
+}
+.login-container{
+    border: 2px solid #007bff;
+    width: 300px;
+    display: flex;
+    justify-content: ce;
+}
+
 
 
 
