--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,102 +1,110 @@
-/* body {
-
-    background: url(../imagenes/wd.svg) no-repeat fixed center center ;
-    background-size: 85% 40%;
-    background-attachment: fixed;
-
-} */
+.box-login {
+  width: 100%;
+  display: flex;
+  height: 50%;
+  align-items: center;
+  justify-content: center;
+}
 
 .container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 2%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 2%;
+}
+
+.container-box {
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .container1 {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    margin-top: 4%;
-
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  margin-top: 4%;
 }
+
 .container2 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
-.img-wiedii{
-    width: 50%;
-}
-
-.space{
-    height: 30%;
-}
-.container-box{
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-
-
-.widget p {
-    display: inline-block;
-    line-height: 1em;
-    
-}
-
 
 .fecha {
-    font-family: Oswald, Arial;
-    text-align: center;
-    font-size:2em;
-    /* background: rgba(0, 0, 0, 0.26); */
-    width: 100%;
+  font-family: Oswald, Arial;
+  text-align: center;
+  font-size: 2em;
+  width: 100%;
+}
 
+.img-wiedii {
+  width: 50%;
+}
+
+input[type="text"],
+input[type="password"] {
+  outline: none;
+  padding: 20px;
+  display: block;
+  width: 300px;
+  border-radius: 3px;
+  border: 2px solid #eee;
+  margin: 20px auto;
+}
+
+input[type="submit"] {
+  padding: 10px;
+  color: #fff;
+  background: #0098cb;
+  width: 320px;
+  margin: 20px auto;
+  margin-top: 0;
+  border: 0;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #00b8eb;
+}
+
+.login20 {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.login {
+  width: 300px;
+}
+
+.login-container {
+  border: 2px solid #007bff;
+  width: 300px;
+  display: flex;
+  justify-content: ce;
 }
 
 .reloj {
-    font-family: Oswald, Arial;
-    width: 100%;
-    font-size: 2.5em;
-    text-align: center;
-    /* background: rgba(0, 0, 0, 0.26); */
+  font-family: Oswald, Arial;
+  width: 100%;
+  font-size: 2.5em;
+  text-align: center;
+  /* background: rgba(0, 0, 0, 0.26); */
 }
 
 .reloj .caja-segundos {
-      display: inline-block;    
+  display: inline-block;
 }
 
-
-.login{
-    width: 300px;
-    
-} 
-
-.login1{
-    width: 300px;
-    padding: 20px;
+.space {
+  height: 30%;
 }
 
-
-
-.box-login{
-    width: 100%;
-    display: flex;
-    height: 50%;
-    align-items: center;
-    justify-content: center;
-  
+.widget p {
+  display: inline-block;
+  line-height: 1em;
 }
-.login-container{
-    border: 2px solid #007bff;
-    width: 300px;
-    display: flex;
-    justify-content: ce;
-}
-
-
-
-
