--- a/css/estilos.css
+++ b/css/estilos.css
@@ -115,5 +115,17 @@ input[type="submit"]:hover {
 
 .widget p {
   display: inline-block;
-  line-height: 1em;
+  line-height: 0;
+}
+
+@media (min-width: 1000px) { 
+  .imghuella{
+    margin-left: 120%;
+  }
+  .box-email-img{
+    margin-left: -150%;
+  }
+  .btn-registro{
+    font-size: 23px;
+  }
 }
